--- a/frontend/src/users/components/UserItem/UserItem.css
+++ b/frontend/src/users/components/UserItem/UserItem.css
@@ -10,9 +10,9 @@
   width: 100%;
   height: 100%;
   text-decoration: none;
-  padding: 1rem;
-  color: white;
-  background: #292929;
+  /* padding: 1rem; */
+  color: #292929;
+  background: white;
 }
 
 .user-item a:hover,
