--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,8 +10,18 @@ html {
 
 body {
   margin: 0;
-  background: #4d4d4d;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
+
 
 .slide-in-left-enter {
   transform: translateX(-100%);
