--- a/frontend/src/users/components/UserItem/UserItem.css
+++ b/frontend/src/users/components/UserItem/UserItem.css
@@ -10,9 +10,9 @@
   width: 100%;
   height: 100%;
   text-decoration: none;
-  /* padding: 1rem; */
-  color: #292929;
-  background: white;
+  padding: 1rem;
+  color: white;
+  background: #292929;
 }
 
 .user-item a:hover,
@@ -20,7 +20,7 @@
   background: #ffd900;
 }
 
-.user-item__content {
+.card.user-item__content {
   padding: 0;
 }
 
