--- a/frontend/src/shared/components/Navigation/MainHeader/MainHeader.css
+++ b/frontend/src/shared/components/Navigation/MainHeader/MainHeader.css
@@ -1,15 +1,17 @@
 .main-header {
   width: 100%;
-  height: 4rem;
+  height: 70px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
-  background: #ff0055;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
-  padding: 0 1rem;
+  background: white;
+  padding: 0 3rem;
   z-index: 5;
+  margin-bottom: 25px;
+
 }
 
 main {
