--- a/frontend/src/shared/components/Navigation/MainNavigation/MainNavigation.css
+++ b/frontend/src/shared/components/Navigation/MainNavigation/MainNavigation.css
@@ -1,6 +1,6 @@
 .main-navigation__menu-btn {
-  width: 3rem;
-  height: 3rem;
+  width: 100%;
+  height: 70px;
   background: transparent;
   border: none;
   display: flex;
@@ -14,16 +14,19 @@
   display: block;
   width: 3rem;
   height: 2.5px;
-  background: white;
+  background: black;
 }
 
 .main-navigation__title {
-  color: white;
+  color: black;
 }
 
 .main-navigation__title a {
+  height: 100%;
+  width: 70px;
+  padding: 25px;
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 .main-navigation__header-nav {
