--- a/frontend/src/places/components/PlaceItem/PlaceItem.css
+++ b/frontend/src/places/components/PlaceItem/PlaceItem.css
@@ -32,7 +32,7 @@
 .place-item__actions {
   padding: 1rem;
   text-align: center;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid black;
 }
 
 .place-item__modal-content {
