--- a/frontend/src/places/components/PlaceItem/PlaceItem.css
+++ b/frontend/src/places/components/PlaceItem/PlaceItem.css
@@ -29,6 +29,12 @@
   margin: 0 0 0.5rem 0;
 }
 
+.place-item__info-date {
+  color: #3b3b3bd4;
+  font-size: 0.8rem;
+  text-align: right;
+}
+
 .place-item__actions {
   padding: 1rem;
   text-align: center;
